# Hippocrates

./: .appveyor.yml  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  CNN-Code.sln  Hippocrates.sln  InstallDependencies.ps1  JNF_NEAT.sln  LICENSE  README.md  appveyor.yml  install_dependencies.bat  main.cpp  name_suggestions.txt  run_process_with_timeout.bat  xor_solver.h
ConvolutionalNeuralNetwork/: ConvolutionalNeuralNetwork.sln  ConvolutionalNeuralNetwork.vcxproj  ConvolutionalNeuralNetwork.vcxproj.filters  ImageParser.cpp  ImageParser.h  SentenceParser.cpp  SentenceParser.h  iinput_data.h  image.cpp  image.h  ipooler.h  isubsampler.h  (+22 more)
Examples/XOR/: CMakeLists.txt  XORSolver.vcxproj  XORSolver.vcxproj.filters
Examples/XOR/Sources/: main.cpp  xor_solver.h
Examples/XOR/Sources/Headers/: xor_solver.h
Examples/XOR/Sources/Implementations/: main.cpp  xor_solver.cpp
Tests/EvenNumbers/: CMakeLists.txt  EvenNumbers.vcxproj  EvenNumbers.vcxproj.filters  README.md
Tests/EvenNumbers/Sources/Headers/: network_tester.h
Tests/EvenNumbers/Sources/Implementations/: main.cpp
Tests/Sine/: CMakeLists.txt  README.md  Sine.vcxproj  Sine.vcxproj.filters
Tests/Sine/Sources/Headers/: sine_body.h
Tests/Sine/Sources/Implementations/: main.cpp  sine_body.cpp
Tests/XOR/: CMakeLists.txt  XORSolver.vcxproj  XORSolver.vcxproj.filters
Tests/XOR/Sources/Implementations/: main.cpp
Tests/xor_two_bits/: CMakeLists.txt  xor_two_bits.vcxproj
Tests/xor_two_bits/Sources/Implementations/: main.cpp
hippocrates/cnn/: CMakeLists.txt  CNN-Code.sln
hippocrates/cnn/source/: cnn.vcxproj  cnn.vcxproj.filters
hippocrates/cnn/source/header/: matrix.hpp  matrix_view.hpp  multi_matrix.hpp  multi_matrix_factory.hpp  neural_network.hpp  neural_network_trainer.hpp  training_data.hpp
hippocrates/cnn/source/header/input_data/: iinput_data.hpp  image.hpp
hippocrates/cnn/source/header/layer/: addition.hpp  all_layers.hpp  convolution.hpp  dimension_scaler.hpp  filter.hpp  filters.hpp  fully_connected.hpp  fully_connected_neural_network.hpp  ilayer.hpp  layers.hpp  relu.hpp  residual_block.hpp
hippocrates/cnn/source/header/layer/pooler/: global_average_pooler.hpp  ipooler.hpp  max_pooler.hpp
hippocrates/cnn/source/header/layer/residual_block/: bottlenecked.hpp  iresidual_block.hpp  normal.hpp
hippocrates/cnn/source/header/layer/residual_block/identity_mapping/: bottlenecked.hpp  iidentity_mapping.hpp
hippocrates/cnn/source/header/layer/residual_block/pooling/: bottlenecked.hpp  ipooling.h
hippocrates/cnn/source/header/learning/: backpropagation.hpp
hippocrates/cnn/source/implementation/: matrix.cpp  matrix_view.cpp  multi_matrix.cpp  multi_matrix_factory.cpp
hippocrates/cnn/source/implementation/input_data/: image.cpp  sentence.cpp
hippocrates/cnn/source/implementation/layer/: addition.cpp  convolution.cpp  filter.cpp  filters.cpp  fully_connected.cpp  fully_connected_neural_network.cpp  relu.cpp  residual_block.cpp
hippocrates/cnn/source/implementation/layer/pooler/: global_average_pooler.cpp  max_pooler.cpp
hippocrates/cnn/source/implementation/layer/residual_block/: bottlenecked.cpp  normal.cpp
hippocrates/cnn/source/implementation/layer/residual_block/identity_mapping/: bottlenecked.cpp
hippocrates/cnn/source/implementation/layer/residual_block/pooling/: bottlenecked.cpp
hippocrates/cnn/sources/headers/Layer/: ilayer.hpp  relu.hpp
hippocrates/cnn/test/: CMakeLists.txt
hippocrates/cnn/test/sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters
hippocrates/cnn/test/sandbox/source/implementation/: main.cpp
hippocrates/neat/: CMakeLists.txt
hippocrates/neat/core/: CMakeLists.txt
hippocrates/neat/core/source/: CMakeLists.txt  neat.vcxproj  neat.vcxproj.filters
hippocrates/neat/core/source/header/: type.hpp
hippocrates/neat/core/source/header/activation_function/: activation_function.hpp  activation_function_factory.hpp  tanh.hpp
hippocrates/neat/core/source/header/body/: body.hpp
hippocrates/neat/core/source/header/phenotype/: connection.hpp  input_adaptor.hpp  neuron.hpp  output_adaptor.hpp  pooler_unit.hpp  relu_unit.hpp  transformation_unit.hpp
hippocrates/neat/core/source/header/phenotype/network_components/: connection.hpp  input_adaptor.hpp  neuron_unit.hpp  output_adaptor.hpp  transformation_unit.hpp
hippocrates/neat/core/source/header/phenotype/network_components/convolutional/: filter_unit.hpp  pooler_unit.hpp  relu_unit.hpp
hippocrates/neat/core/source/header/trained/: neural_network.hpp
hippocrates/neat/core/source/header/training/: neural_network_trainer.hpp  parameters.hpp
hippocrates/neat/core/source/header/utility/: fillable_ref.hpp
hippocrates/neat/core/source/implementation/genotype/: gene.cpp  genome.cpp
hippocrates/neat/core/source/implementation/phenotype/: neural_network.cpp  neuron.cpp  organism.cpp
hippocrates/neat/core/source/implementation/phenotype/network_components/: neuron_unit.cpp
hippocrates/neat/core/source/implementation/training/: neural_network_trainer.cpp  parameters.cpp  species.cpp  species_manager.cpp
hippocrates/neat/core/source/implementation/utility/: logger.cpp
hippocrates/neat/core/sources/headers/genotype/: genome.hpp
hippocrates/neat/core/sources/headers/trained/: classifier.hpp
hippocrates/neat/core/test/: CMakeLists.txt
hippocrates/neat/core/test/even_numbers/: CMakeLists.txt  even_numbers.vcxproj  even_numbers.vcxproj.filters
hippocrates/neat/core/test/testing_utilities/: CMakeLists.txt  testing_utilities.vcxproj  testing_utilities.vcxproj.filters
hippocrates/neat/core/test/testing_utilities/source/header/: testing_utilities.hpp
hippocrates/neat/core/test/xor_three_bits/: CMakeLists.txt  xor_three_bits.vcxproj  xor_three_bits.vcxproj.filters
hippocrates/neat/core/test/xor_two_bits/: CMakeLists.txt  xor_two_bits.vcxproj
hippocrates/neat/core/tests/: README.md
hippocrates/neat/modules/image_recognition/: CMakeLists.txt
hippocrates/neat/modules/image_recognition/source/implementation/: main.cpp
neat/core/tests/xor_three_bits/: CMakeLists.txt  README.md
(+333 files in other folders)
