file(GLOB_RECURSE SOURCES [RELATIVE Sources] *.cpp *.hpp *.c *.h)
add_library(Core SHARED OBJECT ${SOURCES})

MACRO(HEADER_DIRECTORIES return_list sources_folder)
    FILE(GLOB_RECURSE headers [RELATIVE ${sources_folder}] *.hpp *.h)
    SET(dir_list "")
    FOREACH(file_path ${headers})
        GET_FILENAME_COMPONENT(dir_path ${file_path} PATH)
        SET(dir_list ${dir_list} ${dir_path})
    ENDFOREACH()
    LIST(REMOVE_DUPLICATES dir_list)
    SET(${return_list} ${dir_list})
ENDMACRO()

HEADER_DIRECTORIES(HEADERS Sources)
target_include_directories(Core PUBLIC ${HEADERS})
